--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "svix": "^1.61.3",
