--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@vercel/functions": "^2.0.0",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
+    "micro": "^10.0.1",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "server-only": "^0.0.1",
+    "stripe": "^17.7.0",
     "superjson": "^2.2.1",
     "svix": "^1.61.3",
     "zod": "^3.23.3"
