--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/functions": "^2.0.0",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
+    "ioredis": "^5.6.0",
     "micro": "^10.0.1",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
