--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@vercel/functions": "^2.0.0",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "ioredis": "^5.6.0",
