--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "micro": "^10.0.1",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
