--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "resend": "^4.5.1",
     "server-only": "^0.0.1",
     "stripe": "^17.7.0",
     "superjson": "^2.2.1",
     "svix": "^1.61.3",
+    "vercel": "^42.1.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
